--- a/src/style.css
+++ b/src/style.css
@@ -7,3 +7,9 @@ body,
   margin: 0;
   padding: 0;
 }
+
+.animation {
+  animation-delay: 0;
+  animation-duration: 500ms;
+  transform: translateY(-100%);
+}
