--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,18 @@ body,
 }
 
 .animation {
-  animation-delay: 0;
-  animation-duration: 500ms;
+  animation: slideUp 500ms ease-in-out forwards;
+}
+
+.up {
   transform: translateY(-100%);
+}
+
+@keyframes slideUp {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(-100%);
+  }
 }
